# fast_resize

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  LICENSE  OPTIMIZATION_PHASE_D.md  OPTIMIZATION_PHASE_E.md  OPTIMIZATION_PROPOSALS.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE_A_B_SUMMARY.md  PHASE_C_SUMMARY.md  PROMPT.txt  README.md  RESOURCE_USAGE.md  create_test_images.sh  fast_resize.gemspec  fastresize.gemspec  git-add-safe.sh
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml
benchmark/: CMakeLists.txt  bench_formats.cpp  bench_phase2.cpp  bench_phase3.cpp  bench_phase4.cpp  bench_pipeline.cpp  bench_resource_usage.cpp  bench_vs_libvips.cpp
bindings/ruby/: .rspec_status  Gemfile  Rakefile  benchmark_1000.rb  benchmark_500.rb  benchmark_formats.rb  benchmark_phase_d_results.txt  benchmark_png_results.txt  test_all_features.rb  test_all_filters.rb  test_filter_speed.rb  test_phase_c.rb
bindings/ruby/ext/fastresize/: Makefile  extconf.rb  fastresize_ext.bundle  fastresize_ext.cpp
bindings/ruby/ext/fastresize/bindings/ruby/lib/fastresize/: fastresize_ext.bundle
bindings/ruby/lib/: fast_resize.rb  fastresize.rb
bindings/ruby/lib/fastresize/: fastresize_ext.bundle  platform.rb  version.rb
bindings/ruby/spec/: benchmark_spec.rb  fastresize_basic_spec.rb  fastresize_phase2_spec.rb  fastresize_phase3_spec.rb  fastresize_phase4_spec.rb  spec_helper.rb
docs/: API.md  BENCHMARKS.md  CLI_USAGE.md  RUBY_USAGE.md
examples/: CMakeLists.txt  basic_resize.cpp
include/: fastresize.h
scripts/: build-binaries.sh  release.sh  update-version.sh
src/: cli.cpp  decoder.cpp  encoder.cpp  fastresize.cpp  internal.h  pipeline.cpp  pipeline.h  resizer.cpp  simd_resize.cpp  simd_resize.h  simd_utils.h  thread_pool.cpp
tests/: CMakeLists.txt  test_all_extensions.cpp  test_basic.cpp  test_phase2.cpp  test_phase3.cpp  test_phase4.cpp
